fix header overflow

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -13,6 +13,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    width:100%;
+    overflow-x: hidden;
 }
 
 h1,
